# Athene

./: .gitignore  404.html  Cargo.toml  README.md  index.html  mise.toml  print.html  searchindex.js  toc.html  toc.js
.github/instructions/: rust-code-style.instructions.md  rust-error-handling.instructions.md  rust-file-templates.instructions.md  rust-tools.instructions.md  rust.instructions.md
.github/workflows/: gh-pages.yml  rust-clippy.yml  rust.yml
appendix/owlapi/: index.html
appendix/uml/: index.html
athene-hoot/: Cargo.toml  README.md
athene-hoot/owl-examples/: bad-import-1.owl  bad-prefix-1.owl  bad-prefix-2.owl  bad-prefix-3.owl  bad-prefix-3a.owl  bad-prefix-3b.owl  bad-prefix-4.owl  comments.owl  import.owl  people.owl  person.owl  versioned.owl
athene-hoot/src/: error.rs
athene-hoot/src/cli/: mod.rs
athene-hoot/src/command/: completions.rs  external.rs  help.rs  mod.rs  simple.rs
athene-hoot/src/telemetry/: mod.rs
athene-owlapi/: Cargo.toml  README.md
athene-owlapi/src/: error.rs  lib.rs  macros.rs  syntax.rs
athene-owlapi/src/annotations/: mod.rs
athene-owlapi/src/axioms/: annotations.rs  assertions.rs  classes.rs  data_properties.rs  datatypes.rs  declarations.rs  has_keys.rs  mod.rs  object_properties.rs
athene-owlapi/src/builders/: axioms.rs  expressions.rs  mod.rs
athene-owlapi/src/entities/: mod.rs
athene-owlapi/src/expressions/: mod.rs
athene-owlapi/src/fmt/: indenter.rs  mod.rs
athene-owlapi/src/help/: functions.toml  mod.rs
athene-owlapi/src/literals/: mod.rs
athene-owlapi/src/ranges/: mod.rs
athene-owlapi/src/reader/: ast.rs  error.rs  lexer.rs  mod.rs  parser.rs  reporter.rs  semantic.rs
athene-owlapi/src/things/: mod.rs  owl.rs  rdf.rs  rdfs.rs  skos.rs  xml.rs  xsd.rs
athene-owlapi/src/values/: mod.rs
athene-owlapi/tests/: test_ontologies.rs  test_reader.rs  test_reader_examples.rs  test_writer._rs
athene-owlapi/tests/examples/: nomagic-example-001.owl  nomagic-example-002.owl  nomagic-example-003.owl  nomagic-example-004.owl
book/: book.toml
book/src/: SUMMARY.md
book/src/appendix/owlapi/: index.md
book/src/appendix/uml/: index.md
book/src/cli/: index.md
book/src/cli/check/: index.md
book/src/cli/describe/: index.md
book/src/cli/stats/: index.md
book/src/highlight/: owl.js  sparql.js
book/src/introduction/: index.md
book/src/nocturn/: index.md
book/src/nocturn/annotation-properties/: index.md
book/src/nocturn/class-assertions/: index.md
book/src/nocturn/datatype-assertions/: index.md
book/src/nocturn/datatype-properties/: index.md
book/src/nocturn/example-wine/: index.md
book/src/nocturn/expressions/: index.md
book/src/nocturn/extended-property-notation/: index.md
book/src/resources/: owl2-structure-uml.graffle
book/src/theme/: head.hbs
book/src/ui/: index.md
cli/: index.html
cli/check/: index.html
cli/describe/: index.html
cli/document/: index.html
cli/draw/: index.html
cli/stats/: index.html
doc-src/: header.html
highlight/: custom.js  turtle.js
introduction/: index.html
nocturn/: index.html
nocturn/annotation-properties/: index.html
nocturn/class-assertions/: index.html
nocturn/datatype-assertions/: index.html
nocturn/datatype-properties/: index.html
nocturn/example-wine/: index.html
nocturn/expressions/: index.html
nocturn/extended-property-notation/: index.html
nocturn/general-axioms/: index.html
nocturn/graphviz/: example-literals.dot  example-subclassof.dot  index.html
nocturn/individual-relations/: index.html
nocturn/introduction/: index.html
nocturn/nodes/: index.html
nocturn/object-properties/: index.html
nocturn/ontologies/: index.html
nocturn/simple-edges/: index.html
ui/: index.html
ui/editor/: index.html
ui/navigator/: index.html
(+12 files in other folders)
