[package]
name = "athene-hoot"
description = "Simple CLI to drive Athene OWL features."
version = "0.1.0"

edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "hoot"
path = "src/main.rs"

[dependencies]
athene-owlapi = { version = "0.0.1", path = "../athene-owlapi" }
clap = { version = "4.6", features = ["derive", "env"] }
clap_complete = "4.6"
clap-verbosity-flag = { version = "3", default-features = false, features = [
    "tracing",
] }
colorchoice = "1.0"
colorchoice-clap = "1.0"
colored = "3.1"
#icu_locale_core = { version = "2.2", features = ["alloc"] }
#inquire = { version = "0.9", features = ["date"] }
search_path = "0.1"
strum = { version = "0.28", features = ["derive"] }
termimad = "0.35"
thiserror = { version = "2.0", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rdftk_iri = "0.4.1"
terminal-light = "1.9.0"
serde_json = "1.0.150"

[lints]
workspace = true
