[package]
name = "athene-owlapi"
description = """
This package provides a Rust API for OWL that adheres as closely as possible to
the OWL 2 Web Ontology Language Structural Specification.
"""
version = "0.0.1"
readme = "README.md"
publish = true

edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--html-in-header", "doc-src/header.html"]

[features]
default = ["std", "help", "lang-tags"]

## This feature adds the ability to use the `language-tags` crate's `LanguageTag` 
## type for validation and as input when creating Literals.
lang-tags = ["language-tags"]

## This feature adds the ability to add the `chrono` crate's `DateTime` 
## type for validation and as input when creating Literals.
date-time = ["chrono"]

## Provides help content for the Functional Syntax. 
help = ["serde", "toml"]

## This feature implies the presence of the Rust standard library. If not present
## the `no_std` configuration attribute is set.
std = ["rdftk_iri/std", "chrono?/std", "serde?/std", "toml?/std"]

[dependencies]
ariadne = { version = "0.6", features = ["auto-color"] }
chrono = { version = "0.4", default-features = false, features = [
    "alloc",
    "clock",
    "now",
], optional = true }
document-features = "0.2"
language-tags = { version = "0.3", optional = true }
num-traits = "0.2"
rdftk_iri = "0.4"
serde = { version = "1.0", default-features = false, features = [
    "alloc",
    "derive",
], optional = true }
strum = { version = "0.28", features = ["derive"] }
thiserror = { version = "2.0", default-features = false }
toml = { version = "1.1", default-features = false, features = [
    "parse",
    "serde",
], optional = true }

[lints]
workspace = true
